--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:id="@+id/mytest_relativelayout_one">
 
     <TextView android:text="@string/study_string" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/textviewone" />
 
 </RelativeLayout>
