--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,4 +10,17 @@
         android:layout_height="wrap_content"
         android:id="@+id/textviewone" />
 
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="mix"
+        android:id="@+id/radioButton"
+        android:layout_below="@+id/textviewone"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:checked="true"
+        android:clickable="true"
+        android:gravity="center_vertical"
+        android:paddingRight="@dimen/abc_action_bar_stacked_max_height" />
+
 </RelativeLayout>
